<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:background="@color/white"
        app:srcCompat="@drawable/mainlazy"
        android:contentDescription="@string/idk" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="160dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/fontstyle"
            android:textColor="@color/black"
            android:text="@string/it_s"
            android:textSize="60sp" />

        <TextClock
            android:id="@+id/main_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/fontstyle"
            android:format12Hour="hh:mm"
            android:format24Hour="hh:mm"
            android:gravity="center_horizontal"
            android:text="@string/time"
            android:textSize="60sp" />
    </LinearLayout>


</FrameLayout>



